// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders TodoApp correctly with no todos 1`] = `
<div>
  <AddTodo
    handleAddTodo={[Function]}
  />
  <TodoList
    handleTodos={[Function]}
    todos={Array []}
  />
  <TodoFooter />
</div>
`;

exports[`App component renders TodoApp correctly with saved todos 1`] = `
<div>
  <AddTodo
    handleAddTodo={[Function]}
  />
  <TodoList
    handleTodos={[Function]}
    todos={
      Array [
        Object {
          "completed": false,
          "id": 0,
          "text": "Learn Redux",
        },
        Object {
          "completed": false,
          "id": 1,
          "text": "Master Redux",
        },
      ]
    }
  />
  <TodoFooter />
</div>
`;
